Add @Unmodifiable pattern and empty-list defaults to CompositionNode
- Apply empty-list pattern to CompositionNode.Import (vers, injects fields)
- Add @Unmodifiable annotation to immutable list fields and getters
- Change copy constructors to use .toList() for truly immutable collections
- Add convenience constructors with List.of() defaults
- Add explicit typed getters to type expression classes
- Update Parser to pass List.of() instead of null
- Update plan docs with mutability analysis guidelines

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>